# Synth.01

./: .gitignore  CMakeLists.txt  CMakePresets.nojson  README.md
.github/workflows/: release.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthAudioSource.cpp  SynthAudioSource.h
Source/Effects/: DelayLine.cpp  DelayLine.h  DriveDistortion.cpp  DriveDistortion.h
Source/GUI/: AdsrComponent.cpp  AdsrComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EffectsComponent.cpp  EffectsComponent.h  FilterComponent.cpp  FilterComponent.h  LfoComponent.cpp  LfoComponent.h  OscillatorComponent.cpp  OscillatorComponent.h  PresetComponent.cpp  PresetComponent.h
Source/Preset/: PresetManager.cpp  PresetManager.h
Source/Synth/: AdsrEnvelope.cpp  AdsrEnvelope.h  Filter.cpp  Filter.h  LfoGenerator.cpp  LfoGenerator.h  Oscillator.cpp  Oscillator.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
